feat: añadir pagos con Stripe, bloqueos, presencia en chat y más cosas
- Pagos con Stripe funcionando: crear pago, webhook y página para pagar
- Se puede bloquear a usuarios y no pueden mandarse mensajes
- Presencia en tiempo real: ver si alguien está conectado o escribiendo
- Chat mejorado: responder mensajes, mandar fotos, emojis y paginación
- Conversaciones: silenciar, fijar y ver mensajes sin leer
- Panel de admin
- Calendario para el profesional
- Rate limiting por IP para evitar spam
- Migraciones de base de datos V14 a V21
- Tests nuevos para MensajeService y ProfesionalInfoService
- i18n mejorado
- Arreglado bug del rate limit que bloqueaba al reabrir el chat
- Arreglados pagos duplicados y webhooks de Stripe que fallaban sin avisar